--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -11,6 +11,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 16px;
   justify-content: space-around;
   width: 100%;
   background-color: #000;
@@ -23,11 +24,11 @@ main {
 }
 
 .hero_img {
-  margin: 50px auto 15px;
+  margin: 20px auto 15px;
   width: 155px;
   border-radius: 50%;
-  border: 2px solid #919191;
-  box-shadow: 2px 2px 5px #919191;
+  border: none;
+  box-shadow: 1px 1px 15px #f8be00;
 }
 
 .footer {
