:bug: fix: add margin in Home, real necessery

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -24,7 +24,7 @@ main {
 }
 
 .hero_img {
-  margin: 20px auto 15px;
+  margin: 210px auto 15px auto;
   width: 155px;
   border-radius: 50%;
   border: none;
